--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,6 @@
 {
-  "extends": [
-    "airbnb",
-    "prettier"
-  ],
-  "plugins": [
-    "import",
-    "jsx-a11y",
-    "react",
-    "mocha"
-  ],
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["import", "jsx-a11y", "react", "mocha"],
   "env": {
     "browser": true,
     "node": true,
@@ -24,10 +16,7 @@
     "no-underscore-dangle": [
       "error",
       {
-        "allow": [
-          "_id",
-          "__REDUX_DEVTOOLS_EXTENSION__"
-        ]
+        "allow": ["_id", "__REDUX_DEVTOOLS_EXTENSION__"]
       }
     ],
     "jsx-a11y/anchor-is-valid": [
@@ -45,13 +34,19 @@
       }
     ],
     "import/no-named-as-default": 0,
-    "react/static-property-placement": [
-      "error",
-      "static public field"
-    ],
-    "react/state-in-constructor": [
-      "error",
-      "never"
-    ]
-  }
+    "react/static-property-placement": ["error", "static public field"],
+    "react/state-in-constructor": ["error", "never"]
+  },
+
+  "overrides": [
+    {
+      "files": ["test/**/*.js"],
+      "rules": {
+        "no-unused-expressions": "off",
+        "func-names": "off",
+        "no-restricted-syntax": "off",
+        "no-await-in-loop": "off"
+      }
+    }
+  ]
 }
