build: coverage check with spectron and send to coveralls

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,8 +3,7 @@ on: ['push', 'pull_request']
 name: Test Coveralls
 
 jobs:
-  build:
-    name: build
+  react-test:
     runs-on: ubuntu-latest
     steps:
       - name: check out git repository
@@ -24,3 +23,46 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          flag-name: run-react-test
+          parallel: true
+
+  spectron:
+    runs-on: ubuntu-latest
+    steps:
+      - name: check out git repository
+        uses: actions/checkout@v1
+
+      - name: install node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      - name: yarn
+        run: yarn install --network-timeout 1000000 # allows to run without network error
+
+      - name: build application
+        run: yarn build:github
+        env:
+          REACT_APP_GRAASP_API_HOST: ${{secrets.REACT_APP_GRAASP_API_HOST}}
+          REACT_APP_GRAASP_HOST: ${{secrets.REACT_APP_GRAASP_HOST}}
+          REACT_APP_SHOW_NOTIFICATIONS: false
+
+      - name: spectron
+        run: xvfb-run --auto-servernum --server-args='-screen 0, 1600x900x24' yarn mocha:coverage
+
+      - name: coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          flag-name: run-spectron
+          parallel: true
+
+  finish:
+    needs: [spectron, react-test]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel-finished: true
