--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,11 @@
   "plugins": [
     ["@babel/transform-runtime", {
       "regenerator": true
+    }],
+    ["istanbul", {
+      "exclude": [
+        "**/*.spec.js"
+      ]
     }]
   ]
 }
