--- a/package.json
+++ b/package.json
@@ -235,9 +235,7 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.js",
-      "!src/registerServiceWorker.js",
-      "!src/index.js",
-      "!src/store/*.js"
+      "!src/registerServiceWorker.js"
     ]
   }
 }
